// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with children 1`] = `
<ul
  className="menu"
>
  <SelectListItem
    active="seconditem"
    item="item"
    key=".$item"
    onHover={[Function]}
    onSelect={[Function]}
  >
    <i
      className="myicon"
    />
    item
  </SelectListItem>
  <SelectListItem
    active="seconditem"
    item="seconditem"
    key=".$seconditem"
    onHover={[Function]}
    onSelect={[Function]}
  >
    <i
      className="myicon"
    />
    item
  </SelectListItem>
  <SelectListItem
    active="seconditem"
    item="third"
    key=".$third"
    onHover={[Function]}
    onSelect={[Function]}
  >
    <i
      className="myicon"
    />
    item
  </SelectListItem>
</ul>
`;

exports[`should render correctly without children 1`] = `
<ul
  className="menu"
>
  <SelectListItem
    active="seconditem"
    item="item"
    key="item"
    onHover={[Function]}
    onSelect={[Function]}
  />
  <SelectListItem
    active="seconditem"
    item="seconditem"
    key="seconditem"
    onHover={[Function]}
    onSelect={[Function]}
  />
  <SelectListItem
    active="seconditem"
    item="third"
    key="third"
    onHover={[Function]}
    onSelect={[Function]}
  />
</ul>
`;
